--- a/src/main/resources/fxml/ClassroomFXML.fxml
+++ b/src/main/resources/fxml/ClassroomFXML.fxml
@@ -1,19 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-
 <AnchorPane prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="hu.atka.tetrisai.view.controllers.ClassroomController">
     <children>
-        <Label layoutX="486.0" layoutY="72.0" text="Next piece:"/>
-        <Label layoutX="112.0" layoutY="72.0" text="Score:"/>
-        <Button fx:id="buttonLeft" layoutX="240.0" layoutY="406.0" mnemonicParsing="false" onAction="#handleButtonLeft" prefHeight="30.0"
-                prefWidth="50.0" text="&lt;-"/>
-        <Button fx:id="buttonRight" layoutX="350.0" layoutY="406.0" mnemonicParsing="false" onAction="#handleButtonRight" prefHeight="30.0"
-                prefWidth="50.0" text="-&gt;"/>
-        <Button fx:id="buttonDown" layoutX="290.0" layoutY="406.0" mnemonicParsing="false" onAction="#handleButtonDown" prefHeight="30.0"
-                prefWidth="60.0" text="DOWN"/>
+        <Label layoutX="100.0" layoutY="20.0" text="Current generation:"/>
+        <Label layoutX="100.0" layoutY="60.0" text="Fittest bot fitness:"/>
+        <Label layoutX="100.0" layoutY="100.0" text="Fittest bot neuron count:"/>
+        <Label layoutX="100.0" layoutY="140.0" text="Fittest bot lifespan:"/>
+        <Label layoutX="100.0" layoutY="180.0" text="Fittest bot points:"/>
+
+        <Label fx:id="labelCurrentGenerationNumber" layoutX="100.0" layoutY="40.0"/>
+        <Label fx:id="labelCurrentGenerationFittestBotFitness" layoutX="100.0" layoutY="80.0"/>
+        <Label fx:id="labelCurrentGenerationFittestBotNeuronCount" layoutX="100.0" layoutY="120.0"/>
+        <Label fx:id="labelCurrentGenerationFittestBotLifespan" layoutX="100.0" layoutY="160.0"/>
+        <Label fx:id="labelCurrentGenerationFittestBotPoints" layoutX="100.0" layoutY="200.0"/>
+
+        <Canvas fx:id="canvasField" height="320.0" layoutX="240.0" layoutY="40.0" width="160.0" />
+
+        <Button fx:id="testStudents_1" layoutX="240.0" layoutY="406.0" mnemonicParsing="false" onAction="#testStudents" userData="1" prefHeight="30.0"
+                prefWidth="50.0" text="1"/>
+        <Button fx:id="testStudents_10" layoutX="290.0" layoutY="406.0" mnemonicParsing="false" onAction="#testStudents" userData="10" prefHeight="30.0"
+                prefWidth="60.0" text="10"/>
+        <Button fx:id="testStudents_1000" layoutX="350.0" layoutY="406.0" mnemonicParsing="false" onAction="#testStudents" userData="1000" prefHeight="30.0"
+                prefWidth="50.0" text="1000"/>
     </children>
 </AnchorPane>
