--- a/src/main/resources/fxml/ClassroomFXML.fxml
+++ b/src/main/resources/fxml/ClassroomFXML.fxml
@@ -7,25 +7,29 @@
 <AnchorPane prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="hu.atka.tetrisai.view.controllers.ClassroomController">
     <children>
-        <Label layoutX="100.0" layoutY="20.0" text="Current generation:"/>
-        <Label layoutX="100.0" layoutY="60.0" text="Fittest bot fitness:"/>
-        <Label layoutX="100.0" layoutY="100.0" text="Fittest bot neuron count:"/>
-        <Label layoutX="100.0" layoutY="140.0" text="Fittest bot lifespan:"/>
-        <Label layoutX="100.0" layoutY="180.0" text="Fittest bot points:"/>
+        <Label layoutX="30.0" layoutY="20.0" text="Current generation:"/>
+        <Label layoutX="30.0" layoutY="60.0" text="Fittest bot:"/>
+        <Label layoutX="50.0" layoutY="80.0" text="ID:"/>
+        <Label layoutX="50.0" layoutY="120.0" text="Fitness:"/>
+        <Label layoutX="50.0" layoutY="160.0" text="Lifespan:"/>
+        <Label layoutX="50.0" layoutY="200.0" text="Points:"/>
+        <Label layoutX="50.0" layoutY="240.0" text="Neuron count:"/>
 
-        <Label fx:id="labelCurrentGenerationNumber" layoutX="100.0" layoutY="40.0"/>
-        <Label fx:id="labelCurrentGenerationFittestBotFitness" layoutX="100.0" layoutY="80.0"/>
-        <Label fx:id="labelCurrentGenerationFittestBotNeuronCount" layoutX="100.0" layoutY="120.0"/>
-        <Label fx:id="labelCurrentGenerationFittestBotLifespan" layoutX="100.0" layoutY="160.0"/>
-        <Label fx:id="labelCurrentGenerationFittestBotPoints" layoutX="100.0" layoutY="200.0"/>
+        <Label fx:id="labelGenNumber" layoutX="70.0" layoutY="40.0"/>
+        <Label fx:id="labelFittestId" layoutX="70.0" layoutY="100.0"/>
+        <Label fx:id="labelFittestFitness" layoutX="70.0" layoutY="140.0"/>
+        <Label fx:id="labelFittestLifespan" layoutX="70.0" layoutY="180.0"/>
+        <Label fx:id="labelFittestPoints" layoutX="70.0" layoutY="220.0"/>
+        <Label fx:id="labelFittestNeuronCount" layoutX="70.0" layoutY="260.0"/>
 
         <Canvas fx:id="canvasField" height="320.0" layoutX="240.0" layoutY="40.0" width="160.0" />
+        <Canvas fx:id="canvasNeurons" height="320.0" layoutX="450.0" layoutY="40.0" width="160.0" />
 
-        <Button fx:id="testStudents_1" layoutX="240.0" layoutY="406.0" mnemonicParsing="false" onAction="#testStudents" userData="1" prefHeight="30.0"
+        <Button layoutX="240.0" layoutY="406.0" mnemonicParsing="false" onAction="#testStudents" userData="1" prefHeight="30.0"
                 prefWidth="50.0" text="1"/>
-        <Button fx:id="testStudents_10" layoutX="290.0" layoutY="406.0" mnemonicParsing="false" onAction="#testStudents" userData="10" prefHeight="30.0"
+        <Button layoutX="290.0" layoutY="406.0" mnemonicParsing="false" onAction="#testStudents" userData="10" prefHeight="30.0"
                 prefWidth="60.0" text="10"/>
-        <Button fx:id="testStudents_1000" layoutX="350.0" layoutY="406.0" mnemonicParsing="false" onAction="#testStudents" userData="1000" prefHeight="30.0"
-                prefWidth="50.0" text="1000"/>
+        <Button layoutX="350.0" layoutY="406.0" mnemonicParsing="false" onAction="#testStudents" userData="10000" prefHeight="30.0"
+                prefWidth="50.0" text="10000"/>
     </children>
 </AnchorPane>
